--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
+*{
+	color: white;
+	
+}
+body,html{
+	background: url('../images/background.jpg');
+	background-repeat: no-repeat;
+    background-size: 100% 100%;
+    height: 100%;
+}
 .container{
     width: 600px;
     margin: auto;
@@ -16,12 +26,16 @@
     border: 1px solid #f4f4f4;
     border-radius: 5px;
     margin: 5px;
+	background: gray;
+	color: white;
 }
 
 .level{
     width: 70px;
     padding: 2px 4px;
     height: 30px;
+	background: gray;
+	color: white;
 }
 
 input[type=text]{
@@ -29,6 +43,8 @@ input[type=text]{
     height: 20px;
     padding: 2px 4px;
     margin: 5px auto;
+	background: gray;
+	color: white;
 
 }
 
@@ -42,5 +58,5 @@ table tr td{
     background: gray;
     height: 100px;
     width: 100px;
-
+	opacity: 0.5;
 }
