--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 	
 }
 body,html{
-	background: url('../images/background.jpg');
+	background: url('http://i-7.vcimg.com/trim/7e081ddad6710c342a03ad9c89e9c14d1734412/trim.jpg');
 	background-repeat: no-repeat;
     background-size: 100% 100%;
     height: 100%;
@@ -58,5 +58,6 @@ table tr td{
     background: gray;
     height: 100px;
     width: 100px;
-	opacity: 0.5;
+    opacity: 0.5;
+    cursor: pointer;
 }
